add list message api
