# docs/swagger.json
@@ -41,6 +41,34 @@
                     }
                 }
             }
+        },
+        "/linebot/{lineuserId}/message": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "linebot"
+                ],
+                "summary": "uers login",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "lineuserId",
+                        "name": "lineuserId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
